--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.1",
+    "three-decal-geometry": "^1.0.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
