--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
-    "next": "15.3.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.8",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.1",
     "three-decal-geometry": "^1.0.0",
@@ -32,6 +32,7 @@
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.2",
     "tailwindcss": "^4",
